<resources>
    <string name="app_name">NMedia</string>
    <string name="title">NMedia!</string>
    <string name="demoCountFav" translatable="false">75</string>
    <string name="demoCountShare" translatable="false">15</string>
    <string name="demoCountView" translatable="false">50000</string>
    <string name="alt_like">like</string>
    <string name="alt_share">share</string>
    <string name="alt_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="alt_escape">Escape</string>
    <string name="error_empty_content">Error</string>
    <string name="alt_more">post menu</string>
    <string name="alt_view">View Count</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="chooser_play_video">Play Video</string>

</resources>