<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="-238dp"
            tools:listitem="@layout/card_post" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_add_24" />



        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="save, escape" />

        <ImageButton
            android:id="@+id/escape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_spacing"
            android:background="@drawable/circle_bg"
            android:contentDescription="@string/alt_escape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_close_48" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:background="@drawable/circle_bg"
            android:contentDescription="@string/alt_save"
            app:layout_constraintEnd_toStartOf="@id/escape"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/baseline_check_24" />

        <ScrollView
            android:id="@+id/oldContent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_size_full"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/edit_size_full"
            android:layout_marginBottom="@dimen/common_spacing"
            android:background="#aaaaff"
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/save"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/oldContentText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/edit_text_bg"
                android:padding="@dimen/small_spacing"
                android:text="" />

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>